# huquqplusbot

./: .gitignore  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  plz.yml  pyproject.toml
docker/: base.Dockerfile  redis.conf  start-reload.sh  start.sh  worker-start.sh
src/: main.py  worker.py
src/app/: enums.py  filters.py  generate_report.py  keyboards.py  split_message.py  timeutils.py
src/config/: bot.py  celery_app.py  redis_queue.py  settings.py
src/database/: mysql.py  redisdb.py
src/database/alembic/: env.py
src/database/alembic/versions/: 131ff5c6d01c_added_age_field_to_user.py  1349ab971d6a_converted_datetimes_from_string_to_.py  2040e7fae3b2_added_user_and_inquiry_tables.py  496add647bec_add_inquiry_media_fields.py  5607fba81aa8_added_media_type_to_inquiry.py  5a9e99b5bb0c_converted_q_and_a_fields_of_inquiry_to_.py  7b4c0ff52a00_added_phone_and_birth_year_to_user.py  bacc66830e3a_updating_inquiry_chat_to_support_string.py  fcd9da75e18a_added_username_to_user.py
src/models/: base.py  db_models.py  inquiry.py  post.py  user.py
src/routes/: main.py
src/routes/aiogram/: group_router.py  inquiry.py  private_router.py  registration.py
src/tasks/: __init__.py  close_inquiry.py  daily_reminder.py  generate_reports.py  utils.py
